--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,4 +21,4 @@ jobs:
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
           docker build . --file Dockerfile --tag $DOCKER_USERNAME/$REPO_NAME
-          docker push $DOCKER_USERNAME/$REPO_NAME:latest
+          docker push $DOCKER_USERNAME/$REPO_NAME
