--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,24 +1,32 @@
-name: Push image to Docker Hub
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - main # Defina aqui a branch na qual deseja ativar o fluxo
+      - main
+
+env:
+  DOCKER_USER: ${{ secrets.DOCKER_USER }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  REPO_NAME: ${{ secrets.REPO_NAME }}
 
 jobs:
-  push-image-to-docker-hub:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
       
-      - name: Build and push Docker image
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          REPO_NAME: ${{ secrets.REPO_NAME }}
-        run: |
-          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-          docker build . --file Dockerfile --tag $DOCKER_USERNAME/$REPO_NAME:latest
-          docker push $DOCKER_USERNAME/$REPO_NAME:latest
+      - name: Login to Docker Hub
+        run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
+      
+      - name: Build Docker image
+        run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
+      
+      - name: Push Docker image to Docker Hub
+        run: docker push $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
