--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  DOCKER_USER: ${{ secrets.DOCKER_USER }}
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
   REPO_NAME: ${{ secrets.REPO_NAME }}
 
@@ -19,14 +19,14 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Login to Docker Hub
-        run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
       
       - name: Build Docker image
-        run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
+        run: docker build . --file Dockerfile --tag $DOCKER_USERNAME/$REPO_NAME:${{ steps.date.outputs.date }}
       
       - name: Push Docker image to Docker Hub
-        run: docker push $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
+        run: docker push $DOCKER_USERNAME/$REPO_NAME:${{ steps.date.outputs.date }}
