--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   push-image-to-docker-hub:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout source code
@@ -20,5 +20,5 @@ jobs:
           REPO_NAME: ${{ secrets.REPO_NAME }}
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-          docker build . --file Dockerfile --tag $DOCKER_USERNAME
-          docker push $DOCKER_USERNAME
+          docker build . --file Dockerfile --tag $DOCKER_USERNAME/$REPO_NAME:latest
+          docker push $DOCKER_USERNAME/$REPO_NAME:latest
