--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,9 +25,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
           context: .
           file: ./Dockerfile
           push: true
-          tags: username/clockbox:latest
+          tags: $username/clockbox:latest
