--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,4 +28,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/clockbox:latest
 
