--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,10 +26,8 @@ jobs:
         uses: docker/setup-buildx-action@v3
       -
         name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ env.USERNAME }}/${{ env.REPOSITORY }}:latest
+      - name: Build and push
+        run: |
+          docker build -t $DOCKER_USERNAME/$DOCKER_REPOSITORY:latest .
+          docker push $DOCKER_USERNAME/$DOCKER_REPOSITORY:latest
 
