--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,10 @@ jobs:
         uses: docker/setup-buildx-action@v3
       -
         name: Build and push
-        run: |
-          docker build -t $DOCKER_USERNAME/$DOCKER_REPOSITORY:latest .
-          docker push $DOCKER_USERNAME/$DOCKER_REPOSITORY:latest
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}
 
