--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,5 +31,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ env.USERNAME }}/${{ env.DOCKER_REPOSITORY }}
+          tags: ${{ env.USERNAME }}/${{ env.REPOSITORY }}
 
