--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,4 +32,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: danielalvessp/docker-container-flask:latest
+      - 
+        name: Run Docker Container
+        run: |
+          docker run -d -p 8000:80 danielalvessp/docker-container-flask:latest
 
